添加 一直 功能